Правки страниц: "Главная", "Новости", "Моя страница", "Страница одной новости"

--- a/www/community.html
+++ b/www/community.html
@@ -36,6 +36,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+    <script type="text/javascript" src="js/common.js"></script>
     <script type="text/javascript" src="js/script-general.js"></script>
   </head>
   <body>
@@ -112,7 +113,7 @@
               <div class="paginator">
                 <div class="b-community__container pagin-container pagin-wrap">
 
-                    <div class="b-community__item item">
+                    <!-- <div class="b-community__item item">
                       <img src="img/temp/auto/1.png" alt="">
                       <p class="text">
                         <a href="#" class="b-community__item-name">Alexis.Sanches</a>
@@ -121,9 +122,9 @@
                         <span>ездит на</span>
                         <a href="#" class="b-community__item-auto">Audi Q7 Quattttttrooo!</a>
                       </p>
-                    </div>
+                    </div> -->
                     
-                    <div class="b-community__item item">
+                    <!-- <div class="b-community__item item">
                       <img src="img/temp/auto/2.png" alt="">
                       <p class="text">
                         <a href="#" class="b-community__item-name">Alexis.Sanches</a>
@@ -223,7 +224,7 @@
                         <a href="#" class="b-community__item-auto">Audi Q7 Quattttttrooo!</a>
                       </p>
                     </div>
-
+ -->
                   </div>
 
                 <!-- 
@@ -246,8 +247,8 @@
           <section class="l-filter col xs-3">
             <div class="block b-filter">
               <div class="b-filter-wrapp">
-                <h3><span class="all-community">256</span> сообществ</h3>
-                <h4><a href="#"><span class="new-company">12</span> новых</a></h4>
+                <h4><span class="all-community">256</span> сообществ</h4>
+                <h5><a href="#"><span class="new-company">12</span> новых</a></h5>
                 <div class="b-filter__switch">
                   <a href="#" class="b-filter__switch-item text bold" data-filter-category="auto">Авто</a>
                   <a href="#" class="b-filter__switch-item text bold" data-filter-category="moto">Мото</a>
